major refactor 1
